--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-
     <style>
         /* Reset CSS: Please avoid making changes here unless you know what you're doing :) */
         *,
@@ -53,6 +52,7 @@
 <body>
     <div id="game-container"></div>
     <script src="./phaser.js"></script>
+    <script type="module" src="./libs/PhaserUI.js"></script>
     <script type="module" src="./src/main.js"></script>
 </body>
 
